Fixed ascii doc formatting in section 4.4.6.3.

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -3088,8 +3088,8 @@ If you are using replication, and you have changed the password on the *Master* 
 . Restart the *Database Synchronization* Role.
 ===========
 
-[[adding-a-new-appliance-to-an-existing-region* Click *Hourly* to run the backup hourly. You will be prompted to select the number of hours between each analysis.
-gion with a Non-default Password
+[[adding-a-new-appliance-to-an-existing-region]]
+==== Adding a New Appliance to an Existing Region with a Non-default Password
 
 . Create the new appliance.
 . Start the appliance, but do not go into any of the configuration options, instead *SSH* into the new appliance.
