--- a/common/logging_into_cloudforms.adoc
+++ b/common/logging_into_cloudforms.adoc
@@ -7,15 +7,15 @@ Log into {product-title} for the first time after installing by:
 
 .  Navigate to the URL for the login screen. (https://xx.xx.xx.xx on the VM instance)
 .  Enter the default credentials (Username: *admin* | Password: *smartvm*) for the initial login.
-.  Click *login*.
+.  Click *Login*.
 
 ==== Changing the Default Login Password
 
 Change your password to ensure more private and secure access to {product-title}.
 
 . Navigate to the URL for the login screen. (https://xx.xx.xx.xx on the VM instance)
-. Click *Update Password*.
-. Input current *Username* and *Password* in the text fields.
+. Click *Update Password* beneath the *Username* and *Password* text fields.
+. Enter your current *Username* and *Password* in the text fields.
 . Input a new password in the *New Password* field.
 . Repeat your new password in the *Verify Password* field.
 . Click *Login*.
