minor edit - spelled out VM as per RH style

--- a/common/logging_into_cloudforms.adoc
+++ b/common/logging_into_cloudforms.adoc
@@ -5,7 +5,7 @@ Once {product-title} is installed, you can log in and perform administration tas
 
 Log into {product-title} for the first time after installing by:
 
-.  Navigate to the URL for the login screen. (https://xx.xx.xx.xx on the VM instance)
+.  Navigate to the URL for the login screen. (https://xx.xx.xx.xx on the virtual machine instance)
 .  Enter the default credentials (Username: *admin* | Password: *smartvm*) for the initial login.
 .  Click *Login*.
 
@@ -13,7 +13,7 @@ Log into {product-title} for the first time after installing by:
 
 Change your password to ensure more private and secure access to {product-title}.
 
-. Navigate to the URL for the login screen. (https://xx.xx.xx.xx on the VM instance)
+. Navigate to the URL for the login screen. (https://xx.xx.xx.xx on the virtual machine instance)
 . Click *Update Password* beneath the *Username* and *Password* text fields.
 . Enter your current *Username* and *Password* in the text fields.
 . Input a new password in the *New Password* field.
