changed a few small things - removed cloudforms product name from filename so it works upstream

--- a/common/initial-login.adoc
+++ b/common/initial-login.adoc
@@ -1,5 +1,5 @@
-[[intial-login-cloudforms]]
-=== Logging In After Installing CloudForms
+[[initial-login]]
+=== Logging In After Installing {product-title}
 
 Once {product-title} is installed, you can log in and perform administration tasks.
 
