--- a/doc-Installing_on_Google_Compute_Engine/miq/index.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/miq/index.adoc
@@ -15,4 +15,6 @@ include::common/attributes/miq.adoc[]
 :numbered:
 include::doc-Installing_on_Google_Compute_Engine/miq/topics/installation.adoc[]
 include::doc-Installing_on_Google_Compute_Engine/miq/topics/configuration.adoc[]
+include::doc-Installing_on_Google_Compute_Engine/miq/common/initial-login.adoc[]
+
 
