--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/miq/index.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/miq/index.adoc
@@ -20,6 +20,6 @@ include::doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/miq/commo
 
 [[Additional_Configuration]]
 include::doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/miq/topics/additional_configuration.adoc[]
-
+include::doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/miq/common/initial-login.adoc[]
 
 
