--- a/doc-Installing_on_Red_Hat_Enterprise_Virtualization/miq/index.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Virtualization/miq/index.adoc
@@ -17,5 +17,6 @@ include::doc-Installing_on_Red_Hat_Enterprise_Virtualization/miq/topics/installa
 
 [[Installation]]
 include::doc-Installing_on_Red_Hat_Enterprise_Virtualization/miq/common/configuration.adoc[]
+include::doc-Installing_on_Red_Hat_Enterprise_Virtualization/miq/common/initial-login.adoc[]
 
 
