--- a/doc-Installing_on_VMware_vSphere/miq/index.adoc
+++ b/doc-Installing_on_VMware_vSphere/miq/index.adoc
@@ -20,6 +20,7 @@ include::doc-Installing_on_VMware_vSphere/miq/common/configuration.adoc[]
 
 [[Additional_Configuration]]
 include::doc-Installing_on_VMware_vSphere/miq/topics/additional_configuration.adoc[]
+include::doc-Installing_on_VMware_vSphere/miq/common/initial-login.adoc[]
 
 
 
