--- a/doc-Installing_on_Microsoft_Azure/miq/index.adoc
+++ b/doc-Installing_on_Microsoft_Azure/miq/index.adoc
@@ -15,4 +15,5 @@ include::common/attributes/miq.adoc[]
 :numbered:
 include::doc-Installing_on_Microsoft_Azure/miq/topics/installation.adoc[]
 include::doc-Installing_on_Microsoft_Azure/miq/topics/configuration.adoc[]
+include::doc-Installing_on_Microsoft_Azure/miq/common/initial-login.adoc[]
 
