edits for SME comments

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Creating_a_VM_snapshot.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Creating_a_VM_snapshot.adoc
@@ -12,7 +12,7 @@ image:Snapshot_info.png[]
 
 . Click image:plus_circle.png[](*Create a new snapshot for this VM*).
 . Enter snapshot details in *Description*.
-. (Optional) Check *Snapshot VM memory* if you want the snapshot to capture the virtual machine's memory.
+. (Optional) Check *Snapshot VM memory* for the snapshot to preserve the virtual machine's current runtime state.
 . Click *Create*.
 
 
