--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reverting_a_VM_snapshot.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reverting_a_VM_snapshot.adoc
@@ -1,8 +1,16 @@
 [[Reverting_a_VM_snapshot]]
 = Reverting a Virtual Machine to a Snapshot
 
-To revert a virtual machine to a previous state using a snapshot:
+A virtual machine can be reverted to a previous state using a snapshot.
 
+[IMPORTANT]
+====
+The virtual machine state must be powered `off` for the *Revert to selected snapshot* option to be available.
+====
+
+To revert a virtual machine to a snapshot:
+
+. Power the virtual machine off.
 . Navigate to menu:Compute[Infrastructure > Virtual Machines].
 . Select the target virtual machine, and open it to view its details.
 . Under *Properties*, click *Snapshots* to show information about the virtual machine's snapshots.
