Changed references to 'VMWare' to 'VMware'

--- a/doc-Appliance_Hardening_Guide/topics/Firewall.adoc
+++ b/doc-Appliance_Hardening_Guide/topics/Firewall.adoc
@@ -442,7 +442,7 @@ The following table lists the appliance's main services and their respective por
 
 |
 
-                            CFME SmartProxy installed on VMWare ESX Server
+                            CFME SmartProxy installed on VMware ESX Server
 
 
 |
@@ -464,7 +464,7 @@ The following table lists the appliance's main services and their respective por
 
 |
 
-                            CFME SmartProxy installed on VMWare ESX Server
+                            CFME SmartProxy installed on VMware ESX Server
 
 
 |
@@ -1184,7 +1184,7 @@ The following table lists the appliance's main services and their respective por
 
 |
 
-                            VMWare ESX 3.0/3.5 Host (file transfer)
+                            VMware ESX 3.0/3.5 Host (file transfer)
 
 
 |
@@ -1408,7 +1408,7 @@ The following table lists the appliance's main services and their respective por
 
 |
 
-                            VMWare Web Services
+                            VMware Web Services
 
 
 |
@@ -1664,4 +1664,5 @@ The following table lists the appliance's main services and their respective por
 |===
 
 IMPORTANT: To provide your {product-title} infrastructure with an extra layer of security, use a network layer firewall to restrict port access.
+
 
