--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -94,7 +94,7 @@ include::Adding_an_OpenStack_Infrastructure_Provider.adoc[]
 :leveloffset: 2
 = VMware vCenter Providers
 
-To use a VMWare vCenter provider, add it to the appliance and authenticate its hosts.
+To use a VMware vCenter provider, add it to the appliance and authenticate its hosts.
 
 :leveloffset: 3
 include::Adding_a_VMware_vCenter_Provider.adoc[]
@@ -146,6 +146,7 @@ include::Viewing_Hosts_and_Clusters.adoc[]
 
 :leveloffset: 2
 include::Viewing_Virtual_Machines_and_Templates.adoc[]
+
 
 
 
