--- a/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/VNC_and_SPICE_consoles.adoc
@@ -8,14 +8,14 @@ Before opening a console for a virtual machine, you must first configure console
 {product-title} offers the following support for HTML5-based VNC and SPICE consoles:
 
 * VNC and SPICE consoles for Red Hat Enterprise Virtualization Manager with websocket proxy
-* VNC consoles for VMWare with websocket proxy
+* VNC consoles for VMware with websocket proxy
 * VNC consoles for OpenStack using OpenStack-supplied websocket proxy
 
 All of the above make use of the websocket protocol supported by all recent versions of browsers, and can use SSL to encrypt the websocket connection.
 
 OpenStack:: {product-title} only makes an API call to get the URL for the console and open that console in a web browser; see https://access.redhat.com/documentation/en/red-hat-enterprise-linux-openstack-platform/version-7/instances-and-images-guide/#connect_to_an_instance[Directly Connect to a VNC Console] in the _Red Hat Enterprise Linux OpenStack Platform 7 Instances and Images Guide_ for more details.
 
-Red Hat Enterprise Virtualization Manager and VMWare:: By default, the websocket connection runs over HTTPS or HTTP based on how the application was accessed.
+Red Hat Enterprise Virtualization Manager and VMware:: By default, the websocket connection runs over HTTPS or HTTP based on how the application was accessed.
 Under an appliance, you will most likely use HTTPS, and, therefore, the websocket connection will be wss:// (websocket with SSL).
 +
 When configuring Red Hat Virtualization Manager for virtual machine console access, set the display type for each virtual machine to `noVNC` or `SPICE HTML5`. 
@@ -114,6 +114,7 @@ Open a web-based VNC or SPICE console for a virtual machine.
 . Click image:6664.png[] (*Open a web-based VNC or SPICE console for this VM*).
 
 The virtual machine console opens in a new tab in your browser.
+
 
 
 
