--- a/doc-Managing_Providers/cfme/master.adoc
+++ b/doc-Managing_Providers/cfme/master.adoc
@@ -29,6 +29,9 @@ include::topics/Cloud_Providers.adoc[]
 :leveloffset: 1
 include::topics/Networking_Providers.adoc[]
 
+:leveloffset: 1
+include::topics/Storage_Providers.adoc[]
+
 
 :leveloffset: 1
 include::topics/Containers_Providers.adoc[]
