Moved over changes to the installation guides from the master branch.

--- a/doc-Installing_on_Google_Compute_Engine/miq/index.adoc
+++ b/doc-Installing_on_Google_Compute_Engine/miq/index.adoc
@@ -13,6 +13,13 @@ include::common/attributes/miq.adoc[]
 :miq:
 
 :numbered:
-include::doc-Installing_on_Google_Compute_Engine/miq/topics/installation.adoc[]
-include::doc-Installing_on_Google_Compute_Engine/miq/topics/configuration.adoc[]
+
+[[Installation]]
+include::topics/installation.adoc[]
+
+[[Configuration]]
+include::topics/configuration.adoc[]
+
+[[Initial_Login]]
+include::common/initial-login.adoc[]
 
