--- a/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
+++ b/doc-Installing_on_Microsoft_Azure/cfme/master.adoc
@@ -13,9 +13,13 @@ include::common/attributes/cfme.adoc[]
 :cfme:
 
 :numbered:
+
+[[Installation]]
 include::topics/installation.adoc[]
+
+[[Configuration]]
 include::topics/configuration.adoc[]
 
-
-
+[[Initial_Login]]
+include::common/initial-login.adoc[]
 
