--- a/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Linux_OpenStack_Platform/cfme/master.adoc
@@ -12,16 +12,17 @@ include::common/attributes/cfme.adoc[]
 
 :cfme:
 
+:numbered:
+
 [[Installation]]
 include::topics/installation.adoc[]
 
-[[Installation]]
-include::/common/configuration.adoc[]
+[[Configuration]]
+include::common/configuration.adoc[]
 
 [[Additional_Configuration]]
 include::topics/additional_configuration.adoc[]
 
-
-
-
+[[Initial_Login]]
+include::common/initial-login.adoc[]
 
