--- a/doc-Installing_on_Red_Hat_Enterprise_Virtualization/cfme/master.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Virtualization/cfme/master.adoc
@@ -12,14 +12,14 @@ include::common/attributes/cfme.adoc[]
 
 :cfme:
 
+:numbered:
+
 [[Installation]]
 include::topics/installation.adoc[]
 
-[[Installation]]
-include::/common/configuration.adoc[]
+[[Configuration]]
+include::common/configuration.adoc[]
 
-
-
-
-
+[[Initial_Login]]
+include::common/initial-login.adoc[]
 
