--- a/doc-Installing_on_Red_Hat_Enterprise_Virtualization/miq/index.adoc
+++ b/doc-Installing_on_Red_Hat_Enterprise_Virtualization/miq/index.adoc
@@ -12,10 +12,14 @@ include::common/attributes/miq.adoc[]
 
 :miq:
 
-[[Installation]]
-include::doc-Installing_on_Red_Hat_Enterprise_Virtualization/miq/topics/installation.adoc[]
+:numbered:
 
 [[Installation]]
-include::doc-Installing_on_Red_Hat_Enterprise_Virtualization/miq/common/configuration.adoc[]
+include::topics/installation.adoc[]
 
+[[Configuration]]
+include::common/configuration.adoc[]
+
+[[Initial_Login]]
+include::common/initial-login.adoc[]
 
