--- a/doc-Installing_on_Microsoft_Azure/miq/index.adoc
+++ b/doc-Installing_on_Microsoft_Azure/miq/index.adoc
@@ -13,6 +13,12 @@ include::common/attributes/miq.adoc[]
 :miq:
 
 :numbered:
-include::doc-Installing_on_Microsoft_Azure/miq/topics/installation.adoc[]
-include::doc-Installing_on_Microsoft_Azure/miq/topics/configuration.adoc[]
 
+[[Installation]]
+include::topics/installation.adoc[]
+
+[[Configuration]]
+include::topics/configuration.adoc[]
+
+[[Initial_Login]]
+include::common/initial-login.adoc[]
