--- a/doc-Installing_on_VMware_vSphere/cfme/master.adoc
+++ b/doc-Installing_on_VMware_vSphere/cfme/master.adoc
@@ -12,18 +12,17 @@ include::common/attributes/cfme.adoc[]
 
 :cfme:
 
-[[Installation]]
-include::/topics/installation.adoc[]
+:numbered:
 
 [[Installation]]
-include::/common/configuration.adoc[]
+include::topics/installation.adoc[]
+
+[[Configuration]]
+include::common/configuration.adoc[]
 
 [[Additional_Configuration]]
 include::topics/additional_configuration.adoc[]
 
-
-
-
-
-
+[[Initial_Login]]
+include::common/initial-login.adoc[]
 
