--- a/doc-Installing_on_VMware_vSphere/miq/index.adoc
+++ b/doc-Installing_on_VMware_vSphere/miq/index.adoc
@@ -12,17 +12,17 @@ include::common/attributes/miq.adoc[]
 
 :miq:
 
-[[Installation]]
-include::doc-Installing_on_VMware_vSphere/miq/topics/installation.adoc[]
+:numbered:
 
 [[Installation]]
-include::doc-Installing_on_VMware_vSphere/miq/common/configuration.adoc[]
+include::topics/installation.adoc[]
+
+[[Configuration]]
+include::common/configuration.adoc[]
 
 [[Additional_Configuration]]
-include::doc-Installing_on_VMware_vSphere/miq/topics/additional_configuration.adoc[]
+include::topics/additional_configuration.adoc[]
 
-
-
-
-
+[[Initial_Login]]
+include::common/initial-login.adoc[]
 
