edited cinder sections during procedure testing, added button icons

--- a/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
+++ b/doc-Managing_Providers/topics/Adding_OpenStack_Providers.adoc
@@ -1,3 +1,4 @@
+[[adding_openstack_cloud_providers]]
 = Adding OpenStack Providers
 
 // see topics/Adding_an_OpenStack_Infrastructure_Provider.adoc for singlesourcable
