--- a/doc-Managing_Providers/topics/Attaching_Cinder_Volumes.adoc
+++ b/doc-Managing_Providers/topics/Attaching_Cinder_Volumes.adoc
@@ -5,7 +5,7 @@ To attach a Cinder volume to a instance:
 
 . Navigate to menu:Storage[Volumes].
 . Select the volume to attach.
-. Click (Configuration), then click  (Attach selected Cloud Volume to an Instance).
+. Click  image:1847.png[Configuration] (*Configuration*), then click  (*Attach selected Cloud Volume to an Instance*).
 . (Select instance?)
 . ?? 
 
