--- a/doc-Managing_Providers/topics/Creating_Cloud_Volumes_on_Cinder.adoc
+++ b/doc-Managing_Providers/topics/Creating_Cloud_Volumes_on_Cinder.adoc
@@ -1,13 +1,13 @@
 [[creating_cloud_volumes_cinder]]
 = Creating Cloud Volumes on an OpenStack Cinder Provider
 
-You can create and attach cloud volumes with your Openstack cinder provider.
+You can create and attach cloud volumes with your OpenStack Cinder provider.
 
 To create a volume on your Cinder storage manager:
 
 . Navigate to menu:Storage[Volumes].
-. Click (Configuration), then click  (Add New Cloud Volume).
+. Click  image:1847.png[Configuration] (*Configuration*), then click  image:1862.png[] (*Add a new Cloud Volume*).
 . Enter a *Volume Name*.
 . Enter the volume size in gigabytes (GB).
-. Under *Placement*, select the cloud tenant to attach (?) it to. (How to get a cloud tenant to test? What is default?)
+. Under *Placement*, select the cloud tenant to attach it to. 
 . Click *Add*.
