--- a/doc-Managing_Providers/topics/Viewing_a_Cinder_Provider_Timeline.adoc
+++ b/doc-Managing_Providers/topics/Viewing_a_Cinder_Provider_Timeline.adoc
@@ -5,7 +5,7 @@ In Red Hat CloudForms, view events for a Cinder storage provider by following th
 
 . Navigate to menu:Storage[Storage Providers].
 . Select your OpenStack Cinder manager to go to the Cinder provider’s summary page.
-. Click menu:Monitoring[Timelines] to view the events timeline for the provider.
+. Click  image:1994.png[Monitoring] (*Monitoring*), and then  image:1995.png[Timelines] (*Timelines*) to view the events timeline for the provider.
 . A timeline of either management events or policy events can be viewed. 
 .. To view management events, select *Management Events*.
 .. Specify the type of event to view.
