Fixed asciidoc formatting issue

--- a/doc-Policies_and_Profiles_Guide/topics/To_view_Policy_Simulation_RSOP.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_view_Policy_Simulation_RSOP.adoc
@@ -1,4 +1,4 @@
-[[viewing-policy-simulation---resultant-set-of-policy-(rsop)]]
+[[viewing-policy-simulation-resultant-set-of-policy]]
 === Viewing Policy Simulation - Resultant Set of Policy (RSOP)
 
 After the Policy Profiles are assigned, you can see the final result of the resolution of all policies based on which Events occur. Based on the result, you can adjust your Policies. To view RSOP, go to the control area in the {product-title} console.
