edited Cinder sections after testing, added an icon for storage button functions

--- a/doc-Managing_Providers/topics/Creating_Cloud_Volumes_on_Cinder.adoc
+++ b/doc-Managing_Providers/topics/Creating_Cloud_Volumes_on_Cinder.adoc
@@ -1,7 +1,7 @@
 [[creating_cloud_volumes_cinder]]
 = Creating Cloud Volumes on an OpenStack Cinder Provider
 
-You can create and attach cloud volumes with your OpenStack Cinder provider.
+You can create and attach cloud volumes to your OpenStack Cinder provider.
 
 To create a volume on your Cinder storage manager:
 
