--- a/doc-Managing_Providers/topics/Deleting_Cinder_Volumes.adoc
+++ b/doc-Managing_Providers/topics/Deleting_Cinder_Volumes.adoc
@@ -5,6 +5,7 @@ To delete a volume on your Cinder storage manager:
 
 . Navigate to menu:Storage[Volumes].
 . Select the volume to delete.
-. Click (Configuration), then click  (Delete Selected Cloud Volumes).
+. Click  image:1847.png[Configuration] (*Configuration*), then click  image:1861.png[] (*Delete selected Cloud Volumes*).
+
 
 
