--- a/doc-Managing_Providers/topics/Detaching_Cinder_Volumes.adoc
+++ b/doc-Managing_Providers/topics/Detaching_Cinder_Volumes.adoc
@@ -1,13 +1,10 @@
 [[detaching_cinder_volumes]]
 = Detaching a Cinder Volume from an Instance
 
-To attach a Cinder volume to a instance:
+To detach a Cinder volume from an OpenStack instance:
 
 . Navigate to menu:Storage[Volumes].
 . Select the volume to detach.
-. Click (Configuration), then click  (Detach selected Cloud Volume from an Instance).
-. (Select instance?)
-. ?? 
-
-
-Need test resources to document this.
+. Click  image:1847.png[Configuration] (*Configuration*), then click image:volume-icon.png[Detach selected Cloud Volume from an Instance] (*Detach selected Cloud Volume from an Instance*) to open the *Detach Cloud Volume* screen. 
+. Select an instance from the list.
+. Click *Detach*.
