--- a/doc-Managing_Providers/topics/Attaching_Cinder_Volumes.adoc
+++ b/doc-Managing_Providers/topics/Attaching_Cinder_Volumes.adoc
@@ -1,13 +1,11 @@
 [[attaching_cinder_volumes]]
 = Attaching a Cinder Volume to an Instance
 
-To attach a Cinder volume to a instance:
+To attach a Cinder volume to an OpenStack instance:
 
 . Navigate to menu:Storage[Volumes].
 . Select the volume to attach.
-. Click  image:1847.png[Configuration] (*Configuration*), then click  (*Attach selected Cloud Volume to an Instance*).
-. (Select instance?)
-. ?? 
-
-
-Need test resources to document this.
+. Click  image:1847.png[Configuration] (*Configuration*), then click image:volume-icon.png[Attach selected Cloud Volume to an Instance] (*Attach selected Cloud Volume to an Instance*) to open the *Attach Cloud Volume* screen. 
+. Select an instance from the list.
+. (Optional) Enter the *Device Mountpoint* (When do you do this and what do you enter? What happens when you do and don't specify?)
+. Click *Attach*.
