--- a/doc-Managing_Providers/topics/Storage_Providers.adoc
+++ b/doc-Managing_Providers/topics/Storage_Providers.adoc
@@ -1,10 +1,10 @@
 [[storage_providers]]
 = Storage Providers
 
-//NEED DEFINITION HERE.
-In {product-title}, a storage provider is a virtual infrastructure environment that you can manage from a {product-title} appliance. This chapter describes the different types of storage providers available to {product-title}, and how to manage them.
+//NEED IMPROVED DEFINITION.
+In {product-title}, a storage provider is an OpenStack service providing storage resources that you can manage from a {product-title} appliance. This chapter describes the different types of storage providers available to {product-title}, and how to manage them.
 
-There are two types of storage providers available to {product-title}: OpenStack Cinder and OpenStack Swift. Storage providers are discovered automatically by {product-title} after adding an OpenStack cloud provider.
+There are two types of storage providers currently available to {product-title}: OpenStack Cinder and OpenStack Swift. Storage providers are discovered automatically by {product-title} after adding an OpenStack cloud provider.
 
 //The web interface uses virtual thumbnails to represent providers. Each thumbnail contains four quadrants by default, which display basic information about each provider.
 
@@ -14,7 +14,8 @@ There are two types of storage providers available to {product-title}: OpenStack
 
 Cinder is the OpenStack service that provides and manages persistent block storage resources that OpenStack Compute instances can consume.
 
-To use OpenStack Cinder as a storage provider, first add an OpenStack cloud provider to your {product-title} appliance. The Cinder service will be automatically discovered by CloudForms and added to the Storage Managers list in {product-title}. See xref:adding_openstack_cloud_providers[] for instructions on adding a cloud provider.
+To use OpenStack Cinder as a storage provider, you must first add an OpenStack cloud provider to your {product-title} appliance and enable events. The Cinder service will be automatically discovered by CloudForms and added to the *Storage Managers* list in {product-title}. See xref:adding_openstack_cloud_providers[] for instructions on adding a cloud provider and enabling events.
+
 
 
 :leveloffset: 3
