added swift sections to the cinder branch for ease of building and reviewing; edited language in all sections; added draft swift description in main Storage Providers topic

--- a/doc-Managing_Providers/topics/Storage_Providers.adoc
+++ b/doc-Managing_Providers/topics/Storage_Providers.adoc
@@ -2,9 +2,9 @@
 = Storage Providers
 
 //NEED IMPROVED DEFINITION.
-In {product-title}, a storage provider is an OpenStack service providing storage resources that you can manage from a {product-title} appliance. This chapter describes the different types of storage providers available to {product-title}, and how to manage them.
+In {product-title}, a storage provider is a service providing storage resources that you can manage from a {product-title} appliance. This chapter describes the different types of storage providers used by {product-title}, and how to manage them.
 
-There are two types of storage providers currently available to {product-title}: OpenStack Cinder and OpenStack Swift. Storage providers are discovered automatically by {product-title} after adding an OpenStack cloud provider.
+Two types of storage providers are currently available to {product-title}: OpenStack Cinder and OpenStack Swift, which manage physical and software-defined storage. These storage providers are discovered automatically by {product-title} after adding an OpenStack cloud provider.
 
 //The web interface uses virtual thumbnails to represent providers. Each thumbnail contains four quadrants by default, which display basic information about each provider.
 
@@ -12,7 +12,7 @@ There are two types of storage providers currently available to {product-title}:
 :leveloffset: 2
 = OpenStack Cinder Providers
 
-Cinder is the OpenStack service that provides and manages persistent block storage resources that OpenStack Compute instances can consume.
+Cinder is an OpenStack service that provides and manages persistent block storage resources that OpenStack Compute instances can consume.
 
 To use OpenStack Cinder as a storage provider, you must first add an OpenStack cloud provider to your {product-title} appliance and enable events. The Cinder service will be automatically discovered by CloudForms and added to the *Storage Managers* list in {product-title}. See xref:adding_openstack_cloud_providers[] for instructions on adding a cloud provider and enabling events.
 
@@ -38,6 +38,16 @@ include::Deleting_Cinder_Volumes.adoc[]
 :leveloffset: 2
 = OpenStack Swift Providers
 
+Swift is an OpenStack service that provides cloud object storage.
+
+To use OpenStack Swift as a storage provider, you must first add an OpenStack cloud provider to your {product-title} appliance and enable events. The Swift service will be automatically discovered by CloudForms and added to the *Storage Managers* list in {product-title}. See xref:adding_openstack_cloud_providers[] for instructions on adding a cloud provider and enabling events.
+
+
+:leveloffset: 3
+include::Viewing_Swift_Provider_Timeline.adoc[]
+
+:leveloffset: 3
+include::Viewing_Swift_Object_Stores.adoc[]
 
 
 
