--- a/doc-Managing_Providers/topics/Viewing_Swift_Provider_Timeline.adoc
+++ b/doc-Managing_Providers/topics/Viewing_Swift_Provider_Timeline.adoc
@@ -1,12 +1,12 @@
-[[viewing_cinder_timeline]]
-= Viewing a Cinder Provider’s Timeline
+[[viewing_swift_timeline]]
+= Viewing a Swift Provider’s Timeline
 
-In {product-title}, view events for a Cinder storage provider by following these steps:
+In {product-title}, view events for a Swift storage provider by following these steps:
 
 . Navigate to menu:Storage[Storage Providers].
-. Select your OpenStack Cinder manager to go to the Cinder provider’s summary page.
+. Select your OpenStack Swift manager to go to the Swift provider’s summary page.
 . Click  image:1994.png[Monitoring] (*Monitoring*), and then  image:1995.png[Timelines] (*Timelines*) to view the events timeline for the provider.
-. A timeline of either management events or policy events can be viewed. 
+. View a timeline of either management events or policy events:
 .. To view management events, select *Management Events*.
 .. Specify the type of event to view.
 .. Specify the timeline for the events to view.
