BZ#1383114 - Copying changes to OSE providers from the downstream.

--- a/doc-Managing_Providers/topics/Managing_Containers.adoc
+++ b/doc-Managing_Providers/topics/Managing_Containers.adoc
@@ -41,9 +41,11 @@ For Amazon EC2 (AWS) and Google Cloud Engine (GCE) support, OpenShift must be in
 == Working with the Containers Overview Page
 
 The information on all containers providers and entities known to {product-title} is summarized on the Containers *Overview* page. The *Overview* page provides links to other summary pages which contain further information on the containers providers and entities.
+The *Overview* page also provides metrics for *Aggregated Node Utilization*, *Network Utilization Trend*, *New Image Usage Trend*, *Node Utilization*, and *Pod Creation and Deletion Trends*.
+
 
 [caption="Containers Overview"]
-image:containers-overview.png[Containers Overview, height=460]
+image:containers-overview.png[Containers Overview]
 
 .Working with the Containers Overview Page
 . Navigate to menu:Compute[Containers > Overview].
@@ -260,9 +262,3 @@ Perform a SmartState Analysis of a container image to inspect the packages inclu
 The container image is scanned. The process will copy over any required files for the image. After reloading the image page, all new or updated packages are listed.
 
 To monitor the status of container image SmartState Analysis tasks, navigate to menu:Settings[Tasks]. The status of each task is displayed including time started, time ended, what part of the task is currently running, and any errors encountered.
-
-
-
-
-
-
