Added a section on viewing the VMware dashboard, plus a few icons for the procedure

--- a/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Infrastructure_Providers.adoc
@@ -103,6 +103,9 @@ include::Adding_a_VMware_vCenter_Provider.adoc[]
 :leveloffset: 3
 include::Authenticating_VMware_vCenter_Hosts.adoc[]
 
+:leveloffset: 3
+include::VMware_vCenter_Dashboard.adoc[]
+
 :leveloffset: 2
 = Microsoft SCVMM Providers
 
