edited terminology for Overview list after QE feedback

--- a/doc-Managing_Providers/topics/Network_Topology.adoc
+++ b/doc-Managing_Providers/topics/Network_Topology.adoc
@@ -13,7 +13,7 @@ image:Network_Topology.png[]
 . Navigate to menu:Networks[Topology].
 . Click the desired network provider for viewing the provider summary.
 
-Alternatively, on the provider summary page, click *Topology* under the *Overview* list.
+Alternatively, you can open the topology widget from the provider summary page by clicking *Topology* under *Overview*.
 
 * Hovering over any individual graph element will display a summary of details for the individual element.
 * Double-click an entity in the graph to navigate to its summary page.
