Resolved AsciiDoc syntax errors in the Methods Available for Automation guide.

--- a/doc-Methods_Available_for_Automation/topics/Availability_Zones_availability_zone.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Availability_Zones_availability_zone.adoc
@@ -1,4 +1,4 @@
-[[availability-zones-(availability_zone)]]
+[[availability-zones-availability_zone]]
 === Availability Zones (availability_zone)
 
 [cols="1,1", frame="all", options="header"]
@@ -58,3 +58,5 @@
 						
 					
 |===
+
+
