--- a/doc-Methods_Available_for_Automation/topics/Flavors_flavor.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Flavors_flavor.adoc
@@ -1,4 +1,4 @@
-[[flavors-(flavor)]]
+[[flavors-flavor]]
 === Flavors (flavor)
 
 [cols="1,1", frame="all", options="header"]
@@ -36,3 +36,5 @@
 						
 					
 |===
+
+
