--- a/doc-Methods_Available_for_Automation/topics/Guest_Applications_guest_application.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Guest_Applications_guest_application.adoc
@@ -1,4 +1,4 @@
-[[guest-applications-(guest_application)]]
+[[guest-applications-guest_application]]
 === Guest Applications (guest_application)
 
 
@@ -38,4 +38,6 @@
 						
 					
 |===
+
+
 
