--- a/doc-Methods_Available_for_Automation/topics/Snapshot_snapshot.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Snapshot_snapshot.adoc
@@ -1,4 +1,4 @@
-[[snapshot-(snapshot)]]
+[[snapshot-snapshot]]
 === Snapshot (snapshot)
 
 These methods can be used on Snapshots 
@@ -71,4 +71,6 @@ These methods can be used on Snapshots
 						
 					
 |===
+
+
 
