--- a/doc-Methods_Available_for_Automation/topics/Switch_switch.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Switch_switch.adoc
@@ -1,4 +1,4 @@
-[[switch-(switch)]]
+[[switch-switch]]
 === Switch (switch)
 
 
@@ -51,4 +51,6 @@ These methods can be used on Switches.
 						
 					
 |===
+
+
 
