--- a/doc-Methods_Available_for_Automation/topics/VM_Provisioning_for_Clouds_Task_miq_provision_cloud.adoc
+++ b/doc-Methods_Available_for_Automation/topics/VM_Provisioning_for_Clouds_Task_miq_provision_cloud.adoc
@@ -1,4 +1,4 @@
-[[vm-provisioning-for-clouds-task-(miq_provision_cloud)]]
+[[vm-provisioning-for-clouds-task-miq_provision_cloud]]
 ===== VM Provisioning for Clouds Task (miq_provision_cloud)
 
 [cols="1,1", frame="all", options="header"]
@@ -102,3 +102,5 @@
 						
 					
 |===
+
+
