--- a/doc-Methods_Available_for_Automation/topics/Classifications_classification.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Classifications_classification.adoc
@@ -1,4 +1,4 @@
-[[classifications-(classification)]]
+[[classifications-classification]]
 === Classifications (classification)
 
 [cols="1,1", frame="all", options="header"]
@@ -69,3 +69,5 @@
 						
 					
 |===
+
+
