--- a/doc-Methods_Available_for_Automation/topics/Cloud_Networks_cloud_network.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Cloud_Networks_cloud_network.adoc
@@ -1,4 +1,4 @@
-[[cloud-networks-(cloud_network)]]
+[[cloud-networks-cloud_network]]
 === Cloud Networks (cloud_network)
 
 [cols="1,1", frame="all", options="header"]
@@ -69,3 +69,5 @@
 						
 					
 |===
+
+
