--- a/doc-Methods_Available_for_Automation/topics/Cloud_Providers_ems_cloud.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Cloud_Providers_ems_cloud.adoc
@@ -1,4 +1,4 @@
-[[cloud-providers-(ems_cloud)]]
+[[cloud-providers-ems_cloud]]
 ==== Cloud Providers (ems_cloud)
 
 [cols="1,1", frame="all", options="header"]
@@ -102,3 +102,5 @@
 						
 					
 |===
+
+
