--- a/doc-Methods_Available_for_Automation/topics/Cloud_Subnets_cloud_subnet.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Cloud_Subnets_cloud_subnet.adoc
@@ -1,4 +1,4 @@
-[[cloud-subnets-(cloud_subnet)]]
+[[cloud-subnets-cloud_subnet]]
 === Cloud Subnets (cloud_subnet)
 
 [cols="1,1", frame="all", options="header"]
@@ -47,3 +47,5 @@
 						
 					
 |===
+
+
