--- a/doc-Methods_Available_for_Automation/topics/Cloud_Tenants_cloud_tenant.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Cloud_Tenants_cloud_tenant.adoc
@@ -1,4 +1,4 @@
-[[cloud-tenants-(cloud_tenant)]]
+[[cloud-tenants-cloud_tenant]]
 === Cloud Tenants (cloud_tenant)
 
 [cols="1,1", frame="all", options="header"]
@@ -102,3 +102,5 @@
 						
 					
 |===
+
+
