--- a/doc-Methods_Available_for_Automation/topics/Firewall_Rules_firewall_rule.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Firewall_Rules_firewall_rule.adoc
@@ -1,4 +1,4 @@
-[[firewall-rules-(firewall_rule)]]
+[[firewall-rules-firewall_rule]]
 === Firewall Rules (firewall_rule)
 
 [cols="1,1", frame="all", options="header"]
@@ -36,3 +36,5 @@
 						
 					
 |===
+
+
