--- a/doc-Methods_Available_for_Automation/topics/Floating_IPs_floating_ip.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Floating_IPs_floating_ip.adoc
@@ -1,4 +1,4 @@
-[[floating-ips-(floating_ip)]]
+[[floating-ips-floating_ip]]
 === Floating IPs (floating_ip)
 
 [cols="1,1", frame="all", options="header"]
@@ -47,3 +47,5 @@
 						
 					
 |===
+
+
