--- a/doc-Methods_Available_for_Automation/topics/Guest_Device_guest_device.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Guest_Device_guest_device.adoc
@@ -1,4 +1,4 @@
-[[guest-device-(guest_device)]]
+[[guest-device-guest_device]]
 === Guest Device (guest_device)
 
 [cols="1,1", frame="all", options="header"]
@@ -58,3 +58,5 @@
 						
 					
 |===
+
+
