--- a/doc-Methods_Available_for_Automation/topics/Hosts_Vmware_ESX_host_vmware_esx.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Hosts_Vmware_ESX_host_vmware_esx.adoc
@@ -1,4 +1,4 @@
-[[hosts:-vmware-esx-(host_vmware_esx)]]
+[[hosts:-vmware-esx-host_vmware_esx]]
 ==== Hosts: Vmware ESX (host_vmware_esx)
 
 
@@ -126,4 +126,6 @@
 						
 					
 |===
+
+
 
