--- a/doc-Methods_Available_for_Automation/topics/Management_System_Folders_ems_folder.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Management_System_Folders_ems_folder.adoc
@@ -1,4 +1,4 @@
-[[management-system-folders-(ems_folder)]]
+[[management-system-folders-ems_folder]]
 === Management System Folders (ems_folder)
 
 
@@ -60,4 +60,6 @@
 						
 					
 |===
+
+
 
