--- a/doc-Methods_Available_for_Automation/topics/Proxies_miq_proxy.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Proxies_miq_proxy.adoc
@@ -1,4 +1,4 @@
-[[proxies-(miq_proxy)]]
+[[proxies-miq_proxy]]
 === Proxies (miq_proxy)
 
 [cols="1,1", frame="all", options="header"]
@@ -36,3 +36,5 @@
 						
 					
 |===
+
+
