--- a/doc-Methods_Available_for_Automation/topics/Security_Groups_security_group.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Security_Groups_security_group.adoc
@@ -1,4 +1,4 @@
-[[security-groups-(security_group)]]
+[[security-groups-security_group]]
 === Security Groups (security_group)
 
 [cols="1,1", frame="all", options="header"]
@@ -69,3 +69,5 @@
 						
 					
 |===
+
+
