--- a/doc-Methods_Available_for_Automation/topics/Service_Reconfiguration_Task_service_reconfigure_task.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Service_Reconfiguration_Task_service_reconfigure_task.adoc
@@ -1,4 +1,4 @@
-[[service-reconfiguration-task-(service_reconfigure_task)]]
+[[service-reconfiguration-task-service_reconfigure_task]]
 ==== Service Reconfiguration Task (service_reconfigure_task)
 
 [cols="1,1", frame="all", options="header"]
@@ -69,3 +69,5 @@
 						
 					
 |===
+
+
