--- a/doc-Methods_Available_for_Automation/topics/Service_Resource_service_resource.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Service_Resource_service_resource.adoc
@@ -1,4 +1,4 @@
-[[service-resource-(service_resource)]]
+[[service-resource-service_resource]]
 === Service Resource (service_resource)
 
 [cols="1,1", frame="all", options="header"]
@@ -58,3 +58,5 @@
 						
 					
 |===
+
+
