--- a/doc-Methods_Available_for_Automation/topics/VMs_for_Clouds_vm_cloud.adoc
+++ b/doc-Methods_Available_for_Automation/topics/VMs_for_Clouds_vm_cloud.adoc
@@ -1,4 +1,4 @@
-[[vms-for-clouds-(vm_cloud)]]
+[[vms-for-clouds-vm_cloud]]
 ===== VMs for Clouds (vm_cloud)
 
 [cols="1,1", frame="all", options="header"]
@@ -91,3 +91,5 @@
 						
 					
 |===
+
+
