--- a/doc-Managing_Providers/topics/Reviewing_a_Management_System.adoc
+++ b/doc-Managing_Providers/topics/Reviewing_a_Management_System.adoc
@@ -1,16 +1,39 @@
 [[_reviewing_a_management_system]]
 = Viewing a Provider
 
-From a list of providers, you can review a specific provider by clicking on it.
-This displays various options to access provider information. 
+From a list of providers, you can review a specific provider by clicking on it. This displays various options to access provider information. 
 
-.Provider Management Screen
-image:providers-summary-new.png[]
+There are two methods of viewing an infrastructure provider's details: the summary screen (default) and the dashboard screen. Use the summary image:Summary.png[] and dashboard image:Dashboard.png[] buttons to toggle between views.
 
-. *Provider Taskbar*: Choose between Configuration, Policy and Monitoring options for the selected provider. 
-. *Provider Summary*: Displays provider summary such as Properties, Relationships, and Smart Management. 
-. *Provider Summary PDF*: Generates provider summary in PDF format. 
-. *Provider Accordion*: Displays details about Properties and Relationships for the selected provider. 
+Both the summary and dashboard screens contain a taskbar with *Reload*, *Configuration*, *Policy*, *Monitoring*, and *Authentication* buttons to manage the selected provider. 
 
+.Provider Summary Screen
+image:providers-summary-screen.png[]
+
+The provider summary screen displays information about the provider in table format.
+
+* Provider accordion: Displays details about the provider's *Properties* and *Relationships* on the sidebar. Click to expand these lists.
+* Provider summary: Displays a provider's  *Properties*, *Status*, *Relationships*, and *Smart Management*. Click on an item in the *Relationships* table to see more information about that entity.
+
+
+
+.Provider Dashboard Screen
+image:providers-summary-dashboard.png[]
+
+From the dashboard, you can view:
+
+* Number of clusters, hosts, virtual machines, templates, datastores, resource pools, and other entities on the provider. Click on an entity to see more information about that item.
+* Aggregate utilization for CPU, memory, and storage
+* Network I/O statistics
+* Trends for hosts and virtual machines discovered
+
+
+To view the dashboard:
+
+. Navigate to menu:Compute[Infrastructure > Providers].
+. Click the infrastructure provider to view.
+. To access the dashboard view, click image:Dashboard.png[] (*Dashboard view*).
+
+To return to the summary view, click image:Summary.png[] (*Summary view*).
 
 
