--- a/doc-Integration_with_ServiceNow/topics/Managing_record_attributes.adoc
+++ b/doc-Integration_with_ServiceNow/topics/Managing_record_attributes.adoc
@@ -10,7 +10,7 @@ The attributes can be reduced or extended as required by amending the Ruby metho
 Some attributes are not free-text (variable) fields, that is, they must be specific values. For example, the `vendor` value must already exist in the ServiceNow Vendor table beforehand.
 ====
 
-[[create-and-update-(_patch)-record]]
+[[create-and-update-patch-record]]
 === Create and Update (_patch) Record
 You can use the following attributes when creating and/or updating a record.
 
