--- a/doc-Integration_with_ServiceNow/topics/Use_Cases.adoc
+++ b/doc-Integration_with_ServiceNow/topics/Use_Cases.adoc
@@ -26,7 +26,7 @@ Integration/ServiceNow/CMDB/update_patch?description=VM%20${/#vm.guid}%20retired
 -------
 image:6668.png[StateActiveCMDBDeactiveCMDBstate]
 
-[[virtual-machine-reconfiguration-(vmware-only)]]
+[[virtual-machine-reconfiguration-vmware-only]]
 === Virtual Machine Reconfiguration (VMware Only)
 
 Create a new *System Event* instance to update the ServiceNow record after a virtual machine reconfiguration request has been approved and completed.
