added new section about viewing storage profiles for VMware

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Virtual_Machines.adoc
@@ -241,6 +241,10 @@ include::To_tag_Virtual_Machines_and_Templates.adoc[]
 
 
 :leveloffset: 2
+include::Viewing_VMware_Storage_Profiles.adoc[]
+
+
+:leveloffset: 2
 include::To_view_running_processes_after_collection.adoc[]
 
 
