edited wording to make a little more clear after SME feedback

--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_VMware_Storage_Profiles.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_VMware_Storage_Profiles.adoc
@@ -1,7 +1,7 @@
 [[viewing_vmware_storage_profiles]]
 = Viewing a VMware Virtual Machine's Storage Profile
 
-VMware storage profiles allow you to assign specific policies to datastores. Storage profiles are used to tag virtual machines to ensure they operate in compliance with settings in the datastore.
+VMware storage profiles allow you to assign policies to datastores. Storage profiles are used to tag virtual machines to ensure they operate in compliance with settings in the datastore.
 
 {product-title} retrieves VMware virtual machine storage profile information in the inventory, and associates the virtual machines and disks with them.
 
