Added subscription ID option to Discovering Azure providers procedure

--- a/doc-Managing_Providers/topics/Discovering_Azure_Providers.adoc
+++ b/doc-Managing_Providers/topics/Discovering_Azure_Providers.adoc
@@ -4,8 +4,8 @@
 
 . Navigate to menu:Compute[Clouds > Providers].
 . Click  image:1847.png[Configuration] (*Configuration*), then click image:1942.png[Discover Cloud Providers] (*Discover Cloud Providers*).
-. Select Azure from the *Discover Type* list.
-. In the Credentials section, enter the *Client ID*, *Client Key*, and *Azure Tenant ID*.
+. Select *Azure* from the *Discover Type* list.
+. In the Credentials section, enter your Azure *Client ID*, *Client Key*, *Azure Tenant ID*, and *Subscription ID*.
 . Click *Start*.
 
 
